# robot-full

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_robot/lib/my_robot/: arm_controller  test_arm  test_arm_action  test_direct_servo
install/my_robot/share/my_robot/: package.sh  package.xml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/my_robot/lib/my_robot/: move_robot  test_arm_rad  test_arm_raw
src/install/my_robot/share/my_robot/: package.sh  package.xml
src/my_robot/: package.xml  setup.py
src/my_robot/my_robot/: ROS2moveforward.py  arm_and_movement.py  camera_node.py  classify_image.py  test_arm_action.py  test_arm_movement.py
