<package format="3">
  <name>my_robot</name>
  <version>0.0.0</version>
  <description>Description of my_robot</description>
  <maintainer email="user@example.com">User Name</maintainer>
  <license>Apache License 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>

  <buildtool_depend>ament_copyright</buildtool_depend>
  <buildtool_depend>ament_flake8</buildtool_depend>
  <buildtool_depend>ament_pep257</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>servo_controller_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <depend>cv_bridge</depend>
  <depend>python3-opencv</depend>
  <depend>tensorflow</depend>
  <depend>tensorflow-hub</depend>
  <depend>numpy</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

